Replace Long constructor calls with Long.valueOf
The Long constructors with `long` and `String` parameters are deprecated