@@ -95,7 +95,7 @@ public class DataTableImportDDI {
         dv.setName( xmlr.getAttributeValue(null, "name") );
 
         try {
-            dv.setNumberOfDecimalPoints( new Long( xmlr.getAttributeValue(null, "dcml") ) );
+            dv.setNumberOfDecimalPoints( Long.valueOf( xmlr.getAttributeValue(null, "dcml") ) );
         } catch (NumberFormatException nfe) {}
 
         // interval type (DB value may be different than DDI value)
@@ -155,13 +155,13 @@ public class DataTableImportDDI {
         // fileStartPos, FileEndPos, and RecSegNo
         // if these fields don't convert to Long, just leave blank
         try {
-            dv.setFileStartPosition( new Long( xmlr.getAttributeValue(null, "StartPos") ) );
+            dv.setFileStartPosition( Long.valueOf( xmlr.getAttributeValue(null, "StartPos") ) );
         } catch (NumberFormatException ex) {}
         try {
-            dv.setFileEndPosition( new Long( xmlr.getAttributeValue(null, "EndPos") ) );
+            dv.setFileEndPosition( Long.valueOf( xmlr.getAttributeValue(null, "EndPos") ) );
         } catch (NumberFormatException ex) {}
         try {
-            dv.setRecordSegmentNumber( new Long( xmlr.getAttributeValue(null, "RecSegNo") ) );
+            dv.setRecordSegmentNumber( Long.valueOf( xmlr.getAttributeValue(null, "RecSegNo") ) );
         } catch (NumberFormatException ex) {}
 
 
